--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <!--end::Info-->
-                <a href="#" class="btn btn-block btn-sm btn-light-primary font-weight-bolder text-uppercase py-4">Show Profile</a>
+                <a [routerLink]="['/profile/', item.id]"   class="btn btn-block btn-sm btn-light-primary font-weight-bolder text-uppercase py-4">Show Profile</a>
                 <a href="#" class="btn btn-block btn-sm btn-light-primary font-weight-bolder text-uppercase py-4">Show Post</a>
             </div>
             <!--end::Body-->
