--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -42,7 +42,7 @@
                 </div>
                 <!--end::Info-->
                 <a [routerLink]="['/profile/', item.id]"   class="btn btn-block btn-sm btn-light-primary font-weight-bolder text-uppercase py-4">Show Profile</a>
-                <a href="#" class="btn btn-block btn-sm btn-light-primary font-weight-bolder text-uppercase py-4">Show Post</a>
+                <a [routerLink]="['/post/user', item.id]"   class="btn btn-block btn-sm btn-light-primary font-weight-bolder text-uppercase py-4">Show Post</a>
             </div>
             <!--end::Body-->
         </div>
