--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -57,7 +57,7 @@
                     </div>
                     <!--begin::User-->
                     <div class="my-lg-0 my-1">
-                        <a href="#" class="btn btn-sm btn-light-primary font-weight-bolder text-uppercase mr-2">POST</a>
+                        <a [routerLink]="['/post/user/', data.id]" routerLinkActive="router-link-active"  class="btn btn-sm btn-light-primary font-weight-bolder text-uppercase mr-2">POST</a>
                     </div>
                 </div>
                 <!--end::Title-->
