--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -1,3 +1,13 @@
+<div class="row" style="margin-bottom: 10px;">
+    <div class="col-lg-12">
+        <span class="text-muted font-weight-bold">TAGS</span>
+        <br>
+        <button type="button" class="btn btn-light-danger" style="margin-top: 10px;">
+            <i class="fa fa-trash"></i>
+            Dog <span class="badge badge-light"></span>
+        </button>
+    </div>
+</div>
 <div class="row">
     <div class="col-xl-6" *ngFor="let item of data">
         <!--begin::Card-->
@@ -73,7 +83,7 @@
                         <a href="#" class="font-weight-bolder text-primary ml-2">{{ item.likes}} Like</a>
                     </div>
                 </div>
-                <button type="button" class="btn btn-primary btn-sm text-uppercase font-weight-bolder mt-5 mt-sm-0 mr-auto mr-sm-0 ml-sm-auto">Comment</button>
+                <button [routerLink]="['/post/comment/', item.id]" routerLinkActive="router-link-active"  type="button" class="btn btn-primary btn-sm text-uppercase font-weight-bolder mt-5 mt-sm-0 mr-auto mr-sm-0 ml-sm-auto">Comment</button>
             </div>
             <!--end::Footer-->
         </div>
