--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -8,6 +8,13 @@
         </button>
     </div>
 </div>
+<!-- <ul class="list-group">
+    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Morbi leo risus</li>
+    <li class="list-group-item">Porta ac consectetur ac</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+  </ul> -->
 <div class="row">
     <div class="col-xl-6" *ngFor="let item of data">
         <!--begin::Card-->
