--- a/src/app/pages/trending/trending.component.html
+++ b/src/app/pages/trending/trending.component.html
@@ -1,5 +1,5 @@
 <ul class="list-group" *ngFor="let item of data">
-    <li class="list-group-item">{{ item }}</li>
+    <li class="list-group-item"><a [routerLink]="['/post/tag/', item]" routerLinkActive="router-link-active" >{{ item }}</a> </li>
 </ul>
 <br>
 <div class="d-flex justify-content-between align-items-center flex-wrap">
