--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -55,9 +55,9 @@
         <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
             <i class="ki ki-bold-double-arrow-back icon-xs"></i>
         </a>
-        <!-- <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
+        <button (click)="previous()" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
             <i class="ki ki-bold-arrow-back icon-xs"></i>
-        </a> -->
+        </button>
         <button class="btn btn-icon btn-sm border-0 btn-hover-primary mr-2 my-1" *ngFor="let item of listPage" (click)="changePage(item)" [ngClass]="{'active': item == page+1 }">{{ item }}</button>
         <!-- <a href="#" class="btn btn-icon btn-sm border-0 btn-hover-primary mr-2 my-1">...</a>
         <a href="#" class="btn btn-icon btn-sm border-0 btn-hover-primary mr-2 my-1">23</a>
@@ -67,12 +67,13 @@
         <a href="#" class="btn btn-icon btn-sm border-0 btn-hover-primary mr-2 my-1">27</a>
         <a href="#" class="btn btn-icon btn-sm border-0 btn-hover-primary mr-2 my-1">28</a>
         <a href="#" class="btn btn-icon btn-sm border-0 btn-hover-primary mr-2 my-1">...</a>
-        <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1"> -->
-            <!-- <i class="ki ki-bold-arrow-next icon-xs"></i>
-        </a> -->
-        <!-- <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
+        -->
+        <button (click)="next()" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
+            <i class="ki ki-bold-arrow-next icon-xs"></i>
+        </button> 
+            <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
             <i class="ki ki-bold-double-arrow-next icon-xs"></i>
-        </a> -->
+        </a> 
     </div>
     <div class="d-flex align-items-center">
         <select class="form-control form-control-sm text-primary font-weight-bold mr-4 border-0 bg-light-primary" style="width: 75px;" (change)="show()" [(ngModel)]="limit">
