--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -98,12 +98,12 @@
 </div>
 <div class="d-flex justify-content-between align-items-center flex-wrap">
     <div class="d-flex flex-wrap mr-3">
-        <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
-            <i class="ki ki-bold-double-arrow-back icon-xs"></i>
-        </a>
         <!-- <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
-            <i class="ki ki-bold-arrow-back icon-xs"></i>
+            <i class="ki ki-bold-double-arrow-back icon-xs"></i>
         </a> -->
+        <button (click)="previous()" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
+            <i class="ki ki-bold-arrow-back icon-xs"></i>
+        </button>
         <button class="btn btn-icon btn-sm border-0 btn-hover-primary mr-2 my-1" *ngFor="let item of listPage" (click)="changePage(item)" [ngClass]="{'active': item == page+1 }">{{ item }}</button>
         <!-- <a href="#" class="btn btn-icon btn-sm border-0 btn-hover-primary mr-2 my-1">...</a>
         <a href="#" class="btn btn-icon btn-sm border-0 btn-hover-primary mr-2 my-1">23</a>
@@ -119,6 +119,9 @@
         <!-- <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
             <i class="ki ki-bold-double-arrow-next icon-xs"></i>
         </a> -->
+        <button (click)="next()" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
+            <i class="ki ki-bold-arrow-next icon-xs"></i>
+        </button> 
     </div>
     <div class="d-flex align-items-center">
         <select class="form-control form-control-sm text-primary font-weight-bold mr-4 border-0 bg-light-primary" style="width: 75px;" (change)="show()" [(ngModel)]="limit">
