--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -52,9 +52,9 @@
 </div>
 <div class="d-flex justify-content-between align-items-center flex-wrap">
     <div class="d-flex flex-wrap mr-3">
-        <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
+        <!-- <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
             <i class="ki ki-bold-double-arrow-back icon-xs"></i>
-        </a>
+        </a> -->
         <button (click)="previous()" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
             <i class="ki ki-bold-arrow-back icon-xs"></i>
         </button>
@@ -71,9 +71,9 @@
         <button (click)="next()" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
             <i class="ki ki-bold-arrow-next icon-xs"></i>
         </button> 
-            <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
+            <!-- <a href="#" class="btn btn-icon btn-sm btn-light-primary mr-2 my-1">
             <i class="ki ki-bold-double-arrow-next icon-xs"></i>
-        </a> 
+        </a>  -->
     </div>
     <div class="d-flex align-items-center">
         <select class="form-control form-control-sm text-primary font-weight-bold mr-4 border-0 bg-light-primary" style="width: 75px;" (change)="show()" [(ngModel)]="limit">
