--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -65,7 +65,7 @@
                 <div class="d-flex align-items-center flex-wrap justify-content-between">
                     <!--begin::Description-->
                     <div class="flex-grow-1 font-weight-bold text-dark-50 py-2 py-lg-2 mr-5">date of birth : {{ data.dateOfBirth | date}}.
-                    <br>register data: {{ data.registerDate | date }}.</div>
+                    <br>register date: {{ data.registerDate | date }}.</div>
                     <!--end::Description-->
                 </div>
                 <!--end::Content-->
